--- a/io.github.jhaygood86.mauborgne.yml
+++ b/io.github.jhaygood86.mauborgne.yml
@@ -121,7 +121,7 @@ modules:
     sources:
     - type: git
       url: https://github.com/elementary/granite.git
-      commit: aef56bb9f59d40df26d6132d58148c78ed94fefd
+      tag: 6.2.0
 
   - name: mauborgne
     buildsystem: meson
